[gd_scene load_steps=13 format=3 uid="uid://7j6um3ynsp3o"]

[ext_resource type="Script" path="res://scene/Main.gd" id="1_ac1wm"]
[ext_resource type="AudioStream" uid="uid://ci8tudocewq1l" path="res://audio/cowbell.wav" id="2_2df1o"]
[ext_resource type="Texture2D" uid="uid://u58s8gsu1duv" path="res://image/bg_drums.jpg" id="2_l6afa"]
[ext_resource type="Script" path="res://scene/Metronome.gd" id="2_lb2nq"]
[ext_resource type="Texture2D" uid="uid://b732onfp2lo42" path="res://image/ui_icon/clockwise-rotation.svg" id="4_8o8pe"]
[ext_resource type="Texture2D" uid="uid://brpqwpnq0xw7" path="res://image/ui_icon/play-button.svg" id="5_o1gbo"]
[ext_resource type="Texture2D" uid="uid://bmklnfwv0x81n" path="res://image/ui_icon/rolling-dices.svg" id="6_scoqk"]
[ext_resource type="Texture2D" uid="uid://bcj52al2h6fd3" path="res://image/note/6_6_6.svg" id="8_ver2r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ke1rs"]
bg_color = Color(0.113725, 0.113725, 0.113725, 0.870588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnhp8"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.8, 0.8, 0.8, 0.337255)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 12.0
expand_margin_top = 12.0
expand_margin_right = 12.0
expand_margin_bottom = 12.0

[sub_resource type="ButtonGroup" id="ButtonGroup_meer7"]
resource_name = "Continue/Loop"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6efr"]
bg_color = Color(1, 1, 1, 0.219608)
draw_center = false
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ac1wm")

[node name="BgImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l6afa")
expand_mode = 1
stretch_mode = 6

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ke1rs")

[node name="ButtonSwitch" type="Button" parent="."]
modulate = Color(0.529412, 0.796078, 0.466667, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.5
offset_top = -69.0
offset_right = 100.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
toggle_mode = true
text = "Start/Pause"

[node name="Text" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 9.0
offset_right = 562.0
offset_bottom = 147.0
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "[font_size=50]BeatRandom[/font_size] by. [url=http://github.com/LSDogX][img=52]res://image/avatar.png[/img]LSDog[/url] 
1. Click【Start/Pause】, then【RandomBeat】, now you can have random beats
2. Adjust the speed of metronome,【Sound】can mute the metronome
3.【Loop】means looping, and【Run】will generate new beats"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Metronome" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -164.0
offset_right = 440.0
grow_vertical = 0
script = ExtResource("2_lb2nq")

[node name="AudioPlayer" type="AudioStreamPlayer" parent="Metronome"]
stream = ExtResource("2_2df1o")
max_polyphony = 4

[node name="HBox" type="HBoxContainer" parent="Metronome"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Buttons" type="VBoxContainer" parent="Metronome/HBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="ButtonSound" type="CheckButton" parent="Metronome/HBox/Buttons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.998783, 0.959385, 0.794388, 1)
theme_override_font_sizes/font_size = 20
button_pressed = true
text = "sound"
metadata/_edit_use_anchors_ = true

[node name="Tester" type="Button" parent="Metronome/HBox/Buttons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
text = "$BpmTest"
metadata/_edit_use_anchors_ = true

[node name="VBox" type="VBoxContainer" parent="Metronome/HBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 6

[node name="Bpm" type="HBoxContainer" parent="Metronome/HBox/VBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ButtonLow" type="Button" parent="Metronome/HBox/VBox/Bpm"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
text = "sub"

[node name="LineEditBpm" type="LineEdit" parent="Metronome/HBox/VBox/Bpm"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0.85, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "80"
placeholder_text = "80"
alignment = 1
context_menu_enabled = false
virtual_keyboard_type = 2
middle_mouse_paste_enabled = false
caret_blink = true

[node name="ButtonHigh" type="Button" parent="Metronome/HBox/VBox/Bpm"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
text = "add"

[node name="SliderBpm" type="HSlider" parent="Metronome/HBox/VBox"]
layout_mode = 2
min_value = 1.0
max_value = 300.0
value = 1.0

[node name="BeatCount" type="SpinBox" parent="Metronome/HBox/VBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 2.0
max_value = 20.0
value = 4.0
alignment = 1
suffix = "Beats"

[node name="BeatVisual" type="HBoxContainer" parent="Metronome/HBox/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = -2

[node name="Score" type="Control" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -128.0
offset_right = -30.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Score"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nnhp8")
metadata/_edit_use_anchors_ = true

[node name="HBox" type="HBoxContainer" parent="Score/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -143.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBox" type="HBoxContainer" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="ButtonLoop" type="Button" parent="Buttons/HBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0.286275, 0.470588, 0.701961)
theme_override_colors/icon_hover_color = Color(0, 0.635294, 1, 0.678431)
theme_override_colors/icon_hover_pressed_color = Color(0, 0.286275, 0.470588, 0.701961)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0.152941, 0.262745, 0.509804)
theme_override_font_sizes/font_size = 44
toggle_mode = true
button_group = SubResource("ButtonGroup_meer7")
text = "Loop"
icon = ExtResource("4_8o8pe")
icon_alignment = 1
expand_icon = true

[node name="ButtonContinue" type="Button" parent="Buttons/HBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0.286275, 0.470588, 0.701961)
theme_override_colors/icon_hover_color = Color(0, 0.635294, 1, 0.678431)
theme_override_colors/icon_hover_pressed_color = Color(0, 0.286275, 0.470588, 0.701961)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0.152941, 0.262745, 0.509804)
theme_override_font_sizes/font_size = 44
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_meer7")
text = "Run"
icon = ExtResource("5_o1gbo")
icon_alignment = 1
expand_icon = true

[node name="Control" type="Control" parent="Buttons/HBox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ButtonRandom" type="Button" parent="Buttons/HBox"]
modulate = Color(1, 0.796078, 0.482353, 1)
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.286275, 0.470588, 0.701961)
theme_override_colors/icon_hover_color = Color(1, 0.635294, 1, 0.678431)
theme_override_colors/icon_hover_pressed_color = Color(1, 0.286275, 0.470588, 0.701961)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0.109804, 0.152941, 0.262745, 0.509804)
theme_override_font_sizes/font_size = 44
text = "Rdm"
icon = ExtResource("6_scoqk")
icon_alignment = 1
expand_icon = true

[node name="Settings" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -454.0
offset_top = 25.0
offset_right = -38.0
offset_bottom = 149.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_d6efr")

[node name="HBox" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Settings/HBox"]
layout_mode = 2
text = "$Settings"
horizontal_alignment = 1

[node name="SpinPlayTimes" type="SpinBox" parent="Settings/HBox"]
layout_mode = 2
min_value = 1.0
max_value = 23.0
value = 2.0
alignment = 1
prefix = "Play ["
suffix = "] times in \"run\" mode"

[node name="ScrollContainer" type="ScrollContainer" parent="Settings"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="VBox" type="HBoxContainer" parent="Settings/ScrollContainer"]
layout_mode = 2

[node name="CheckTriplets" type="CheckBox" parent="Settings/ScrollContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("8_ver2r")
